--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-.idea/inspectionProfiles/
 ### macOS template
 # General
 .DS_Store
@@ -49,6 +48,8 @@ parts/
 sdist/
 var/
 wheels/
+pip-wheel-metadata/
+share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
@@ -65,17 +66,18 @@ pip-log.txt
 pip-delete-this-directory.txt
 
 # Unit test / coverage reports
-cov_html/
-junit-report.xml
 htmlcov/
 .tox/
+.nox/
 .coverage
 .coverage.*
 .cache
 nosetests.xml
 coverage.xml
 *.cover
+*.py,cover
 .hypothesis/
+.pytest_cache/
 
 # Translations
 *.mo
@@ -83,9 +85,9 @@ coverage.xml
 
 # Django stuff:
 *.log
-.static_storage/
-.media/
 local_settings.py
+db.sqlite3
+db.sqlite3-journal
 
 # Flask stuff:
 instance/
@@ -103,11 +105,26 @@ target/
 # Jupyter Notebook
 .ipynb_checkpoints
 
+# IPython
+profile_default/
+ipython_config.py
+
 # pyenv
 # .python-version
 
-# celery beat schedule file
+# pipenv
+#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
+#   However, in case of collaboration, if having platform-specific dependencies or dependencies
+#   having no cross-platform support, pipenv may install dependencies that don't work, or not
+#   install all needed dependencies.
+#Pipfile.lock
+
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+__pypackages__/
+
+# Celery stuff
 celerybeat-schedule
+celerybeat.pid
 
 # SageMath parsed files
 *.sage.py
@@ -133,6 +150,12 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
 ### VirtualEnv template
 # Virtualenv
 # http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
@@ -143,6 +166,7 @@ venv.bak/
 [Ll]ocal
 pyvenv.cfg
 pip-selfcheck.json
+
 ### SublimeText template
 # Cache files for Sublime Text
 *.tmlanguage.cache
@@ -174,6 +198,7 @@ bh_unicode_properties.cache
 # Sublime-github package stores a github token in this file
 # https://packagecontrol.io/packages/sublime-github
 GitHub.sublime-settings
+
 ### Windows template
 # Windows thumbnail cache files
 Thumbs.db
@@ -197,12 +222,14 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
 ### VisualStudioCode template
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
@@ -213,6 +240,7 @@ $RECYCLE.BIN/
 .idea/dictionaries
 .idea/deployment.xml
 .idea/webServers.xml
+.idea/inspectionProfiles/
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
@@ -287,10 +315,13 @@ cscope.out
 cscope.files
 tags
 
-# apiclient stuff
+# custom stuff
 blah*
 *.log*
 *.env
-shell.py
 *.csv
+*.json
 .idea
+shell.py
+cov_html/
+junit-report.xml
